[gd_scene load_steps=7 format=2]

[ext_resource path="res://Space Shooter Redux/PNG/UI/numeral0.png" type="Texture" id=1]
[ext_resource path="res://Player/DeathShockwave.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Expand"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 125, 125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 0.574349 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.133333 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 7.02369

[sub_resource type="SphereMesh" id=4]

[node name="DeathShockwave" type="Node2D"]
scale = Vector2( 125, 125 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Expand"
anims/Expand = SubResource( 1 )

[node name="OuterCollision" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterCollision"]
shape = SubResource( 2 )

[node name="Inner" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Inner"]
shape = SubResource( 3 )

[node name="Visual" type="MeshInstance2D" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 10, 10 )
mesh = SubResource( 4 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="OuterCollision" to="." method="_on_OuterCollision_area_entered"]
[connection signal="area_exited" from="Inner" to="." method="_on_Inner_area_exited"]
